MYSQLEXCEL-292 - Allow saved connections to remain stand-alone instead of merging with Workbench
- Upgraded to the latest MySQL.Utility.dll that supports an enhanced InfoDialog that can display a combo box at the left of the command area. (Source/Lib/MySQL.Utility.dll, source/Classes/MiscUtilities.cs, source/Panels/WelcomePanel.cs)
- Extended the logic that migrates stored connections to the MySQL Workbench's connections.xml file to support postponing the migration 1 hour, 1 day, 1 week, 1 month or indefinitely. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings,
source/ThisAddIn.cs, source/app.config)
- Added a new option to the Options dialog to manually migrate stored connections to Workbench, in case the user chose to postpone the automatic migration. A label showing the next scheduled automatic migration was also added for informational purposes. (Source/Forms/OptionsDialog.Designer.cs, Source/Forms/OptionsDialog.cs, Source/Forms/OptionsDialog.resx)
- The public method ShowGlobalOptionsDialog was added to reuse the code that opens the global options dialog. (source/ThisAddIn.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -134,5 +134,14 @@
     <Setting Name="ImportExcelFormatTime" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
       <Value Profile="(Default)">hh:mm:ss</Value>
     </Setting>
+    <Setting Name="WorkbenchMigrationRetryDelay" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="WorkbenchMigrationSucceeded" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="WorkbenchMigrationLastAttempt" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
