--- a/source/app.config
+++ b/source/app.config
@@ -130,6 +130,15 @@
             <setting name="ImportExcelFormatTime" serializeAs="String">
                 <value>hh:mm:ss</value>
             </setting>
+            <setting name="WorkbenchMigrationRetryDelay" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WorkbenchMigrationSucceeded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WorkbenchMigrationLastAttempt" serializeAs="String">
+                <value />
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
