MYSQLEXCEL-293 - Replace About dialog's splash screen with a flexible one
- Replace About dialog's splash screen with a flexible one where the copyright years can be easily changed using labels instead of having them in hardcoded text, as we have now. This is critical since the hardcoded images have a wrong copyright year. (source/Forms/AboutBox.Designer.cs, source/MySQL.ForExcel.csproj, source/Panels/WelcomePanel.cs, source/Properties/Resources.Designer.cs, source/Properties/Resources.resx, source/Resources/SplashScreen.png)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -529,19 +529,19 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -633,6 +633,8 @@
     <None Include="Resources\SplashScreenExcel.png" />
     <None Include="Resources\select_all.png" />
     <None Include="Resources\select_none.png" />
+    <None Include="Resources\SplashScreen.png" />
+    <None Include="Resources\SplashScreen2.png" />
     <Content Include="Resources\Warning.png" />
   </ItemGroup>
   <ItemGroup />
