MYSQLEXCEL-301 - ERROR REFRESHING IMPORTED DATA WITH A CONNECTION WHERE THE PASSWORD WASN'T SAVED
- Added 2 new options to the Global Options dialog to either "Restore imported MySQL data in Excel Tables when opening an Excel workbook" or "Restore imported MySQL data in Excel Tables when showing the Add-In's sidebar". (source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.resx, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Fixed code in the ConnectionId setter to call the MySqlWorkbenchConnection.SetAdditionalConnectionProperties method. Added code to the Restore method to to check the status of MySQL connections before attempting to refresh imported MySQL data using those connections, if connections are not active an attempt to connect is done. If the connections do not have a password specified the connection is attempted without password, if that fails then a dialog is displayed asking for the password before attempting to open the connection again. (source\Classes\ImportConnectionInfo.cs)
- Fixed a typo in the GetDataFromSelectQuery extension method about an extra "from" displayed in the error message in case an Exception is thrown. (source\Classes\MySQLDataUtilities.cs)
- Added code to the InitializeWorkbook method to honor the new property added on the Global Options dialog. (source\ThisAddIn.cs)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -143,5 +143,8 @@
     <Setting Name="WorkbenchMigrationLastAttempt" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GlobalImportDataRestoreWhenOpeningWorkbook" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
