--- a/source/app.config
+++ b/source/app.config
@@ -139,6 +139,9 @@
             <setting name="WorkbenchMigrationLastAttempt" serializeAs="String">
                 <value />
             </setting>
+            <setting name="GlobalImportDataRestoreWhenOpeningWorkbook" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
