--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -636,6 +636,7 @@
     <None Include="Resources\select_none.png" />
     <None Include="Resources\SplashScreen.png" />
     <None Include="Resources\SplashScreen2.png" />
+    <None Include="Resources\top.png" />
     <Content Include="Resources\Warning.png" />
   </ItemGroup>
   <ItemGroup />
