MYSQLEXCEL-252 - [IMPORT] ERROR IMPORTING GEOMETRY TYPE DATA
- Updated to the latest MySQL.Utility.dll that adds support for spatial data. Added a new library needed by the MySQL.Utility to handle regular expressions needed to parse spatial data from text representations. (source\libraries\MySQL.Utility.dll, source\libraries\MySql.Utility.RegularExpressions.dll, source\MySQL.ForExcel.csproj)
- Updated WiX code to include the new spatial regular expressions library in the product installations. (Installer\main.wxs)
- Added a new option to the Global Options dialog to select the format used to encode and decode spatial data as text. Rearranged all controls in the Global Options dialog to group them by tabs, since the form was already too big and full of options, now it is easier to navigate. (source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.resx)
- Added a new user property for the text format selected to encode and decode spatial data. (source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added support to handle spatial data on all data operations (Import, Export, Append, Edit) supported in MySQL for Excel. (source\ThisAddIn.cs, source\Classes\MySQLDataColumn.cs, source\Classes\MySQLDataTable.cs, source\Classes\MySqlDataType.cs,
source\Classes\MySqlDisplayDataType.cs)
- Added support to handle spatial data with stored procedures (on this commit this support is not complete and another commit to complete the support will be done). (source\Classes\CustomPropertyDescriptor.cs, source\Forms\ImportProcedureForm.cs)
- Added visual cues to the dialogs where MySQL data can be previewed so that BLOB and NULL values are spotted line in MySQL Workbench. (source\Controls\PreviewDataGridView.cs, source\Forms\PreviewTableViewDialog.Designer.cs, source\Forms\PreviewTableViewDialog.cs, source\Forms\ImportTableViewForm.Designer.cs, source\Forms\ImportTableViewForm.cs, sourc

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -146,5 +146,8 @@
     <Setting Name="GlobalImportDataRestoreWhenOpeningWorkbook" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="GlobalSpatialDataAsTextFormat" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">WKT</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
