--- a/source/app.config
+++ b/source/app.config
@@ -142,6 +142,9 @@
             <setting name="GlobalImportDataRestoreWhenOpeningWorkbook" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="GlobalSpatialDataAsTextFormat" serializeAs="String">
+                <value>WKT</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
