--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -196,6 +196,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libraries\MySQL.Utility.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Utility.RegularExpressions">
+      <HintPath>libraries\MySql.Utility.RegularExpressions.dll</HintPath>
+    </Reference>
     <Reference Include="Office, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -580,6 +583,7 @@
     <None Include="Resources\edit.png" />
     <None Include="Resources\exit.png" />
     <None Include="Resources\help.png" />
+    <None Include="Resources\blob.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
@@ -629,6 +633,7 @@
     <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-SSH-Disabled.png" />
     <None Include="Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-Disabled-32x32.png" />
     <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png" />
+    <None Include="Resources\null.png" />
     <Content Include="Resources\refresh_sidebar.png" />
     <None Include="Resources\remove_col_mapping.png" />
     <None Include="Resources\SplashScreenExcel.png" />
