MYSQLEXCEL-308 - MYSQL FOR EXCEL - IGNORE DUPLICATES OPTION
- Added new options to the Advanced Append Data Options dialog to choose the behavior for rows containing unique key values that are duplicates of the ones in the rows in the database. (source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Forms\AppendDataForm.cs, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Created the AppendDuplicateValuesActionType to match the options added to the Advanced Append Data Options dialog. Added code to the GetPreSqlForAddedRows method to use INSERT IGNORE INTO or REPLACE INTO instead of INSERT INTO for Append Data operations depending on the option selected on the Advanced Append Data Options dialog to handle duplicate values for unique keys. (source\Classes\MySQLDataTable.cs)
- Added new constants for INSERT IGNORE INTO or REPLACE INTO statements. Modified the SqlStatementType method to handle the newly added INSERT IGNORE INTO or REPLACE INTO statements. (source\Classes\MySqlStatement.cs)
- Updated option dialogs to match the new layout done for the Global Options dialog to group options by tabs since adding more options to them was making the forms very large. (source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Forms\ExportAdvancedOptionsDialog.Designer.cs, source\Forms\ExportAdvancedOptionsDialog.resx, source\Forms\ImportAdvancedOptionsDialog.Designer.cs, source\Forms\ImportAdvancedOptionsDialog.resx)
- Updated the tab order of controls. (source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.resx)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -149,5 +149,8 @@
     <Setting Name="GlobalSpatialDataAsTextFormat" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
       <Value Profile="(Default)">WKT</Value>
     </Setting>
+    <Setting Name="AppendDuplicateUniqueValuesAction" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ErrorOutAndAbort</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
