--- a/source/app.config
+++ b/source/app.config
@@ -145,6 +145,9 @@
             <setting name="GlobalSpatialDataAsTextFormat" serializeAs="String">
                 <value>WKT</value>
             </setting>
+            <setting name="AppendDuplicateUniqueValuesAction" serializeAs="String">
+                <value>ErrorOutAndAbort</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
