MYSQLEXCEL-310 - MYSQL FOR EXCEL EDIT FEATURE ON MULTIPLE COMPUTERS
- Created the WorkbookConnectionInfos class to handle everything related to stored connection information related to Import and Edit Data operations. The class now handles 2 types of storage: the user settings file (as previous versions of the product) and custom XMLparts saved within the Workbook. The storage is automatically chosen by checking if the Workbook supports custom XML parts or not. Functionality to ask the users if they wish to perform an automatic migration of data from the user settings file to custom XML parts has been added, and it is triggered when a Workbook is opened and connection information in the settings file is found. All methods, properties and fields related to connection information was moved from other files to this one. All other classes that accessed connection information were updated to fetch it from this new class. (source\Classes\WorkbookConnectionInfos.cs, source\ThisAddIn.cs, source\Forms\ManageConnectionInfosDialog.Designer.cs, source\Forms\ManageConnectionInfosDialog.cs, source\Forms\ManageConnectionInfosDialog.resx, source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.resx, source\Forms\EditDataDialog.cs, source\Controls\ExcelAddInPane.cs, source\MySQL.ForExcel.csproj)
- Implemented the IEquatable interface in the EditConnectionInfo and ImportConnectionInfo classes so that checks for inclusion in lists could be done. (source\Classes\EditConnectionInfo.cs, source\Classes\ImportConnectionInfo.cs)
- Added methods to handle custom document properties in Workbooks, and to check if a Workbook supports XML parts. (source\Classes\ExcelUtilities.cs)
- Added methods to handle serialization and deserialization of objects that support serialization. (source\Classes\MiscUtilities.cs)
- Added resource strings for the dialog shown to users to ask for migration of connection information from the users settings fi

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -238,6 +238,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Classes\WorkbookConnectionInfos.cs" />
     <Compile Include="Classes\CustomProperty.cs" />
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
     <Compile Include="Classes\DbObject.cs" />
