MYSQLEXCEL-309 - LOSES MAPPINGS WHEN [DE-]SELECTING FIRST COLUMN CONTAINS NAMES
- Added the MySqlDataTypeOverridenByUser property to identify when a column's data type has been overridden by the user. Changed the SetMySqlDataType methods to behave differently if the value being set comes from user input instead of programmatically. (source\Classes\MySQLDataColumn.cs)
- Added code to the UseFirstRowAsHeaders method to call a different SetMySqlDataType if the data type has already been overriden by users. (source\Classes\MySQLDataTable.cs)
- Added a new context menu option for the DataType combo box to reset a user overridden data type to the default auto-detected one. (source\Forms\ExportDataForm.Designer.cs, source\Forms\ExportDataForm.cs, source\Forms\ExportDataForm.resx, source\MySQL.ForExcel.csproj, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx, source\Resources\reset.png)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -643,6 +643,7 @@
     <None Include="Resources\SplashScreen.png" />
     <None Include="Resources\SplashScreen2.png" />
     <None Include="Resources\top.png" />
+    <None Include="Resources\reset.png" />
     <Content Include="Resources\Warning.png" />
   </ItemGroup>
   <ItemGroup />
