--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -56,7 +56,8 @@
     <RootNamespace>MySQL.ForExcel</RootNamespace>
     <AssemblyName>MySQL.ForExcel</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <DefineConstants>VSTO40</DefineConstants>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -585,6 +586,10 @@
     <None Include="Resources\exit.png" />
     <None Include="Resources\help.png" />
     <None Include="Resources\blob.png" />
+    <None Include="Resources\Connection-TCP-32x32.png" />
+    <None Include="Resources\Connection-X-32x32.png" />
+    <None Include="Resources\Connection-Socket-32x32.png" />
+    <None Include="Resources\Connection-SSH.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
