--- a/source/app.config
+++ b/source/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <userSettings>
         <MySQL.ForExcel.Properties.Settings>
-            <setting name="ExportDetectDatatype" serializeAs="String">
+            <setting name="ExportDetectDataType" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="ExportAddBufferToVarchar" serializeAs="String">
@@ -150,4 +150,4 @@
             </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
