Bug #29179195 - "QUERY DID NOT MATCH ANY ROWS IN THE DB..." WHEN USING FLOAT OR DOUBLE
- Added a new global option for Edit Sessions called "Tolerance for FLOAT and DOUBLE comparisons in WHERE clause", which is used along with the "Use optimistic updates on all Edit Data sessions" option. (source/app.config, source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Forms/GlobalOptionsDialog.resx, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Modified code in the GetSqlForModifiedRowUsingOptimisticConcurrency method so WHERE clauses for optimistic updates use something like "´float_or_double_column´ BETWEEN [some_float_or_double_value]-[epsilon_tolerance] AND [some_float_or_double_value]+[epsilon_tolerance]" which allows for a proper row matching in the database. (source/Classes/MySqlDataRow.cs)
- Replaced the temporary key certificate for ClickOnce (which seems that cannot be turned off for Office add-ins) so that it does not contain a password to see if this fixes build issues in Jenkins. (source/MySQL.ForExcel.csproj, source/MySQL.ForExcel_TemporaryKey.pfx)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -152,5 +152,8 @@
     <Setting Name="AppendDuplicateUniqueValuesAction" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
       <Value Profile="(Default)">ErrorOutAndAbort</Value>
     </Setting>
+    <Setting Name="GlobalEditToleranceForFloatAndDouble" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0.0001</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
