--- a/source/app.config
+++ b/source/app.config
@@ -137,7 +137,7 @@
                 <value>False</value>
             </setting>
             <setting name="WorkbenchMigrationLastAttempt" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="GlobalImportDataRestoreWhenOpeningWorkbook" serializeAs="String">
                 <value>True</value>
@@ -147,6 +147,9 @@
             </setting>
             <setting name="AppendDuplicateUniqueValuesAction" serializeAs="String">
                 <value>ErrorOutAndAbort</value>
+            </setting>
+            <setting name="GlobalEditToleranceForFloatAndDouble" serializeAs="String">
+                <value>0.0001</value>
             </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
