Bug #26008777 - MYSQL FOR EXCEL ADDS MORE NUMBERS WHEN A FLOAT DATA TYPE IS IMPORTED
- Created a new bool setting called ImportFloatingPointDataAsDecimal (true by default), that lets users import any floating point data as DECIMAL which is the data type that stores the floating point numbers exactly as given, whereas the other data types (FLOAT and DOUBLE) are stored as approximate values. (source/app.config, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Added visual support to set the new ImportFloatingPointDataAsDecimal setting in the Import Data options. (source/Forms/ImportAdvancedOptionsDialog.Designer.cs, source/Forms/ImportAdvancedOptionsDialog.cs, source/Forms/ImportAdvancedOptionsDialog.resx)
- Modified constructors that create a local DataTable using the schema information from the MySQL DB so that if the new ImportFloatingPointDataAsDecimal setting is true, any FLOAT and DOUBLE columns are created as DECIMAL ones. (source/Classes/MySQLDataTable.cs)
- Created the ConvertApproximateFloatingPointDataTypeColumnsToExact method to convert columns in a source DataTable from FLOAT/DOUBLE to DECIMAL and cast the data from the former data type to the latter. Modified the GetDataFromSelectQuery method to return DataTable.ConvertApproximateFloatingPointDataTypeColumnsToExact  if the new ImportFloatingPointDataAsDecimal setting is true. (source/Classes/MySQLDataUtilities.cs)
- Updated the CHANGES file with other committed changes so far and the ones for this bug. (CHANGES)
- Updated the help text for the "Tolerance for FLOAT and DOUBLE comparisons in WHERE clause" global option that is related to the new setting added on this bug fix. (source/Forms/GlobalOptionsDialog.resx, source/Forms/GlobalOptionsDialog.Designer.cs)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -155,5 +155,8 @@
     <Setting Name="GlobalEditToleranceForFloatAndDouble" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0.0001</Value>
     </Setting>
+    <Setting Name="ImportFloatingPointDataAsDecimal" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
