--- a/source/app.config
+++ b/source/app.config
@@ -151,6 +151,9 @@
             <setting name="GlobalEditToleranceForFloatAndDouble" serializeAs="String">
                 <value>0.0001</value>
             </setting>
+            <setting name="ImportFloatingPointDataAsDecimal" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
