--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -241,6 +241,8 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Classes\ImportDataParams.cs" />
+    <Compile Include="Classes\ImportingRowsInfo.cs" />
     <Compile Include="Classes\WorkbookConnectionInfos.cs" />
     <Compile Include="Classes\CustomProperty.cs" />
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
@@ -256,7 +258,6 @@
     <Compile Include="Classes\Exceptions\MySqlDataLoadException.cs" />
     <Compile Include="Classes\Exceptions\ParentWorkbookNullException.cs" />
     <Compile Include="Classes\Exceptions\ValueNotSuitableForConversionException.cs" />
-    <Compile Include="Classes\ImportDataParams.cs" />
     <Compile Include="Classes\ImportConnectionInfo.cs" />
     <Compile Include="Classes\EditConnectionInfo.cs" />
     <Compile Include="Classes\ExcelUtilities.cs" />
