--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -643,6 +643,7 @@
     <None Include="Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-Disabled-32x32.png" />
     <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png" />
     <None Include="Resources\null.png" />
+    <None Include="Resources\network_light.png" />
     <Content Include="Resources\refresh_sidebar.png" />
     <None Include="Resources\remove_col_mapping.png" />
     <None Include="Resources\SplashScreenExcel.png" />
@@ -652,6 +653,8 @@
     <None Include="Resources\SplashScreen2.png" />
     <None Include="Resources\top.png" />
     <None Include="Resources\reset.png" />
+    <None Include="Resources\user_light.png" />
+    <None Include="Resources\schema_light.png" />
     <Content Include="Resources\Warning.png" />
   </ItemGroup>
   <ItemGroup />
