Bug #29826900 - CONNECTION DATA NOT VISIBLE ON MS OFFICE DARK GRAY THEME
- Updated to the latest MySQL.Utility version that introduces the RegistryMonitor class useful to monitor changes to a Windows registry key. (source/libraries/MySQL.Utility.dll)
- Created the OfficeTheme class that mimics the behavior of the Context.officeTheme property available only in the newest JavaScript add-ins framework. The class contains 4 basic colors that change with the selected Office theme so the add-in can paint its controls with the same colors. (source/Classes/OfficeTheme.cs, source/MySQL.ForExcel.csproj)
- Added utility methods to support the new OfficeTheme class easily retrieve from the Windows registry the current Office theme numeric code and translate that to a full theme with colors. (source/Classes/ExcelUtilities.cs)
- Added code to user controls and panels to re-paint with colors that match the current Office theme. (source/Controls/ExcelAddInPane.cs, source/Controls/HotLabel.cs, source/Controls/MySqlListView.cs, source/Controls/SearchEdit.cs, source/Panels/AutoStyleableBasePanel.cs,
source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs)
- Added a RegistryMonitor instance when the add-in is initialized (and dispose of it properly when the add-in is shutdown) to track changes to the Windows registry key that holds the current Office color theme. When changes are detected on the Windows registry key, all panels on the custom add-ins pane are re-painted with colors matching the selected Office color theme. (source/ThisAddIn.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -243,6 +243,7 @@
   <ItemGroup>
     <Compile Include="Classes\ImportDataParams.cs" />
     <Compile Include="Classes\ImportingRowsInfo.cs" />
+    <Compile Include="Classes\OfficeTheme.cs" />
     <Compile Include="Classes\WorkbookConnectionInfos.cs" />
     <Compile Include="Classes\CustomProperty.cs" />
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
